--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
     #bibliography p {
       text-indent: 2em hanging;
     }
+    .figure {
+      font-size: .8em;
+    }
   </style>
 </head>
 <body id="home">
@@ -232,6 +235,8 @@
           <span>📊 42</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 1. "Street scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>While the eruption of Mt. Vesuvius in 79 CE is Pompeii’s most infamous natural disaster, there was another disaster the city was known for before the volcano popped its top: the earthquake of 62 CE. Seneca the Younger wrote about the event in his book <em>Natural Questions</em>, describing an earthquake that destroyed Pompeii and left Herculaneum barely standing.<sup></sup></p>
 
           <p>As the modern archaeological work has progressed in Pompeii, there is ample evidence that bears truth to the event, with many of its structures featuring damage caused by seismic activity and many restoration work-related artifacts found throughout the city.<sup></sup></p>
@@ -303,6 +308,8 @@
           <span>📊 33</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 2. "Cart in street scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>Walking amongst a Roman street was an assault on the senses. Ancient poet Martial detailed the cacophony of sound one might experience walking through a Roman street:</p>
 
           <p>“Schoolmasters deny you life in the morning, bakers at night, the hammers of the coppersmiths all day. On one hand the idle moneychanger rattles his grubby counter with Nero's metal, on the other the pounder of Spanish gold dust beats his well-worn stone with shining mallet; neither does Bellona's frenzied throng give up, nor the garruIous castaway with his swaddled trunk, nor the Jew that his mother taught to beg, nor the blear-eyed pedlar of sulphurated wares.”<sup></sup></p>
@@ -416,6 +423,8 @@
           <span>📊 41</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 3. "Eatery scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>When it came to eating and drinking, the average Pompeiian left their home and ate out, for the limited and dense living arrangements didn’t have space for a pantry or kitchen, and any kind of cooking could be a disastrous fire waiting to happen.<sup></sup></p>
 
           <p>Archaeologists have so far uncovered over 140 food and drink sites and 30 plus bakeries, which meant there was roughly one spot to eat or drink for every 55-90 Pompeiians.<sup></sup> These were small establishments, averaging around 350 sq ft of floor space and precious little seating, so most eating and drinking would occur outside of the venue on one of the many benches that lined the streets.<sup></sup> Not only could you fill yourself with food and wine but many of these places were also sources of finding a prostitute or partaking in some gambling.<sup></sup></p>
@@ -499,6 +508,8 @@
           <span>📊 184</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 4. Antiquitatem, image, http://www.antiquitatem.com/en/pompeii-electoral-graffiti-aedile-iivir.</p>
+
           <p>Politics appears to have dominated the Pompeiian social scene. Every year, four magistrates were elected: two duumvir and two aedile, with the latter being more of a junior position to the former.<sup></sup> Together they would fill and oversee the town council, a body that would operate the civic management of Pompeii, such as the building of public spaces or managing the treasury. Being a councillor granted one certain privileges, such as the best seating at public events. However, the role of duumvir trumped them all, which is likely why archaeologists have unearthed over 2,500 campaign posters throughout the city of Pompeii, a town of roughly 12,000 people.<sup></sup></p>
 
           <p>Most of these posters are rather plainly stated slogans: “I beg you to elect Publius Furius duumvir, a good man.”<sup></sup> Sometimes a little more, but not much, will be added, such as “He brings good bread,” or “great giver of games.” We even have examples of negative or satirical ads: “The little thieves ask for Vatia as aedile”<sup></sup> and “The dice-throwers ask for Cn. Helvius Sabinus.”<sup></sup></p>
@@ -543,6 +554,8 @@
           <span>📊 111</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 5. "Bath scene," Daniel Knauf, <em>Spartacus</em>, 2010.</p>
+
           <p>To bathe is to be Roman and like the rest of the empire, Pompeii featured a multitude of commercial and private baths, although most were in a state of disrepair ever since the great earthquake of 62 CE.<sup></sup> A bathing complex would be a place to socialize and relax while enjoying a steam, a scrub down, a massage, some sunbathing, and even games played with a ball.<sup></sup> They were the ultimate source of Roman R&R.</p>
 
           <p>Baths are also considered a great social equalizer, as everyone visited the baths, from the rich to the poor, the elite and the enslaved, even emperors would visit public baths.<sup></sup></p>
@@ -662,6 +675,8 @@
           <span>📊 55</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 6. "Amphitheater scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>Perhaps Pompeii’s most important venue in the city was its amphitheater. An outdoor venue that seated 20,000 people, it played host to a variety of events, from man-on-man gladiatorial combat, man vs. beast “hunts,” athletic displays, and perhaps even pantomimes.<sup></sup> Special marbled front-row seating was reserved for the most elite of Pompeii’s citizens who had their own private entrance to prevent mingling with the public.<sup></sup></p>
 
           <p>Much like modern-day boxers, gladiators were represented by a manager that booked their fights and provided their training.<sup></sup> Gladiators were primarily slaves and condemned criminals with a small amount being volunteers.<sup></sup> They appear to have lived communally in a type of gladiatorial barracks, two of which have been found in Pompeii full of a healthy supply of equipment such as weapons, helmets, and shinguards.</p>
@@ -734,6 +749,8 @@
           <span>📊 147K</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 7. "Initial eruption scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>The only surviving eyewitness account of the eruption comes from Pliny the Younger, who watched the events unfold from his home on the other side of the Bay of Naples. In a personal letter he wrote around thirty years after the event, he describes first noticing the large cloud of ash emanating from Mt. Vesuvius early in the afternoon although it is likely it started much earlier.<sup></sup> This gigantic cloud of ash and pumice (light, porous rocks) had risen nine miles into the sky and would begin to deposit six inches of debris onto the city of Pompeii <em>every hour</em>.<sup></sup></p>
 
           <div class="footnote">
@@ -770,6 +787,8 @@
           <span>📊 89K</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 8. "Harbor scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>Pliny the Younger wrote that his adoptive father, Pliny the Elder, would launch a rescue fleet to the shores close to Mt. Vesuvius and to check in on his dear friend Pomponianus.<sup></sup></p>
 
           <div class="footnote">
@@ -840,6 +859,8 @@
           <span>📊 4.9k</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 9. "Temple destruction scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>By the late afternoon, the volcanic cloud was upwards of 16 miles into the sky and Mt. Vesuvius was now bombarding Pompeii with lithics, a much larger, denser type of rock 6-12 inches in diameter.<sup></sup> These screeching projectiles and the heaviness of nearly two feet of pumice began to strain and demolish the roofs of the structures of Pompeii, causing severe damage and death.</p>
 
           <div class="footnote">
@@ -917,6 +938,8 @@
           <span>📊 27K</span>
         </div>
         <div class="hidden-div">
+          <p class="figure">Fig. 10. "Pyroclastic surge scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+
           <p>At roughly six in the morning, it was now Pompeii’s turn to bear the brunt of pyroclastic surges.<sup></sup> The first was actually repelled by Pompeii’s centuries-old city walls and granted them a reprieve of about an hour, but the next two would flow over the walls and begin to take the lives of the remaining survivors. While not as hot as the surges that took out the citizens of Herculaneum, they were just as deadly but probably more excruciatingly so as instead of instantly vaporizing, Pompeiians burned to death and asphyxiated on the noxious gases.<sup></sup> Since these surges were not as hot and thus did not carbonize human flesh, they allowed the remains to leave imprints in the volcanic ash that future archaeologists would be able to fill with plaster and make molds that give us the dramatic casts we see in museums throughout the world today.<sup></sup></p>
 
           <div class="footnote">
