--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
           <span>📊 111</span>
         </div>
         <div class="hidden-div">
-          <p class="figure">Fig. 5. "Bath scene," Daniel Knauf, <em>Spartacus</em>, 2010.</p>
+          <p class="figure">Fig. 5. "Bath scene," Daniel Knauf, <em>Spartacus: Blood and Sand</em>, 2010.</p>
 
           <p>To bathe is to be Roman and like the rest of the empire, Pompeii featured a multitude of commercial and private baths, although most were in a state of disrepair ever since the great earthquake of 62 CE.<sup></sup> A bathing complex would be a place to socialize and relax while enjoying a steam, a scrub down, a massage, some sunbathing, and even games played with a ball.<sup></sup> They were the ultimate source of Roman R&R.</p>
 
@@ -983,106 +983,17 @@
             <p class="note">Ibid.</p>
           </div>
         </div>
-      </div>      
-
-      <!-- Text Post 
-      <div class="tweet">
-        <div class="tweet-header">
-          <div style="display: flex;">
-            <div class="avatar"><img src="viator-avatar.jpg" alt="Titus Avatar" /></div>
-            <div class="user-info">
-              <div class="tweet-user">
-                <span class="display-name">Code Buddy</span>
-                <span class="meta-line">@fakename1 · Apr 18, 2025</span>
-              </div>
-            </div>
-          </div>
-          <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
-        </div>
-        <div class="tweet-content">
-          Working on a side project with some amazing people. Stay tuned! 🚀
-        </div>
-        <div class="tweet-actions">
-          <span>💬 8</span>
-          <span>🔁 21</span>
-          <span>❤️ 102</span>
-          <span>📊 950</span>
-        </div>
-        <div class="hidden-div">
-           <p>Godzilla is watching.<sup></sup></p>
-          <div class="footnote">
-              <p class="note" data-note="Mary the Younger, Natural Questions, trans. Harry M. Hine, (The University of Chicago Press, 2010)."></p>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- Video Post 
-      <div class="tweet">
-        <div class="tweet-header">
-          <div style="display: flex;">
-            <div class="avatar"><img src="viator-avatar.jpg" alt="Titus Avatar" /></div>
-            <div class="user-info">
-              <div class="tweet-user">
-                <span class="display-name">Video Blogger</span>
-                <span class="meta-line">@fakename1 · Apr 18, 2025</span>
-              </div>
-            </div>
-          </div>
-          <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
-        </div>
-        <div class="tweet-content">
-          Edited my latest vlog - thoughts?
-        </div>
-        <div class="media">
-          <video controls>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <div class="tweet-actions">
-          <span>💬 45</span>
-          <span>🔁 67</span>
-          <span>❤️ 412</span>
-          <span>📊 4.9k</span>
-        </div>
-        <div class="hidden-div">This is a behind-the-scenes clip from the vlog.</div>
-      </div> -->
-
-      <!-- Repost 
-      <div class="tweet">
-        <div class="tweet-header">
-          <div style="display: flex;">
-            <div class="avatar"><img src="viator-avatar.jpg" alt="Titus Avatar" /></div>
-            <div class="user-info">
-              <div class="tweet-user">
-                <span class="display-name">Tech Guru</span>
-                <span class="meta-line">@fakename1 · Apr 18, 2025</span>
-              </div>
-            </div>
-          </div>
-          <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
-        </div>
-        <div class="tweet-content">
-          Reposting this insightful thought:
-          <div class="repost">
-            <strong>@thinker</strong> — The best way to predict the future is to invent it.
-          </div>
-        </div>
-        <div class="tweet-actions">
-          <span>💬 14</span>
-          <span>🔁 38</span>
-          <span>❤️ 176</span>
-          <span>📊 2.3k</span>
-        </div>
-        <div class="hidden-div">Reposted from my favorite creator.</div>
-      </div> -->
+      </div>
 
       <div id="bibliography">
         <h2>Bibliography</h2>
+        <p>Anderson, Paul W.S., dir. <em>Pompeii</em>. Sony Pictures Home Entertainment, 2014.</p>
+        <p>Antiquitatem. “Local Elections in Pompeii.” Accessed April 17, 2025. http://www.antiquitatem.com/en/pompeii-electoral-graffiti-aedile-iivir.</p>
         <p>Beard, Mary. <em>The Fires of Vesuvius: Pompeii Lost and Found</em>. The Belknap Press of Harvard University Press, 2008.</p>
         <p>The British Museum. “Pompeii Live from the British Museum.” YouTube, May 20, 2020. https://www.youtube.com/watch?v=0Cinu9yIbp0.</p>
         <p>Cooley, Alison E., and M. G. L. Cooley. <em>Pompeii and Herculaneum: A Sourcebook</em>. Routledge, 2014.</p>
         <p>Hartnett, Jeremy. <em>The Roman Street: Urban Life and Society in Pompeii, Herculaneum, and Rome</em>. Cambridge University Press, 2017.</p>
+        <p>Knauf, Daniel dir. <em>Spartacus: Blood and Sand</em>. Starz Entertainment, 2010.</p>        
         <p>Levin-Richardson, Sarah. <em>The Brothel of Pompeii: Sex, Class, and Gender at the Margins of Roman Society</em>. Cambridge University Press, 2019.</p>
         <p>Martial. <em>Epigrams</em>. Translated by D.R. Shackleton Bailey. Vol. 3. Harvard University Press, 1993.</p>
         <p>Pliny the Younger. <em>The Letters of the Younger Pliny</em>. Translated by Betty Radice. Penguin Books, 1969.</p>
