Added light comedy

--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
     .figure {
       font-size: .8em;
     }
+    .hashtag {
+      color: #1d9bf0;
+    }
   </style>
 </head>
 <body id="home">
@@ -263,7 +266,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          Alright, just got checked in, scored a sweet place right by the entrance with everything I could want within walking distance.
+          Alright, just got checked in, scored a sweet place right by the entrance with everything I could want within walking distance. <span class="hashtag">#LiveLoveLaugh</span>
         </div>
         <div class="tweet-actions">
           <span>💬 0</span>
@@ -296,7 +299,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          Dear Jupiter, how do these Pompeiians ever hear themselves think?? I’ve only been here an hour and my head is throbbing from all the noise...
+          Dear Jupiter, how do these Pompeiians ever hear themselves think?? I’ve only been here an hour and my head is throbbing from all the noise... 😵‍💫
         </div>
         <div class="media">
           <img src="arrival.jpg" alt="Entrance of Pompeii" />
@@ -453,7 +456,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          Woooo-wee, look at the size of this baby, I just had to get one to go!
+          Woooo-wee, look at the size of this baby, I just had to get one to go! <span class="hashtag">#foodie</span>
         </div>
         <div class="media">
           <img src="bread.png" alt="Loaf of Roman bread" />
@@ -587,7 +590,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          What happens in Pompeii, stays in Pompeii. I'm gonna sleep good tonight if you know what I mean!
+          What happens in Pompeii, stays in Pompeii. I'm gonna sleep good tonight if you know what I mean! <span class="hashtag">#IMeanSex</span>
         </div>
         <div class="media">
           <img src="brothel.png" alt="" />
@@ -705,7 +708,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          Aww man, they keep sparing the losers’ lives. I want to see some blood, damnit!!
+          Aww man, they keep sparing the losers’ lives. I want to see some blood, damnit!! <span class="hashtag">#NoFunZone</span>
         </div>
         <div class="tweet-actions">
           <span>💬 0</span>
@@ -812,7 +815,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          People of Pompeii, I have arrived and there's nothing to fear. Stay strong and always remember: Fortune favors the bold. Now if you excuse me, time for a nightcap before bed.
+          People of Pompeii, I have arrived and there's nothing to fear. Stay calm and always remember: Fortune favors the bold. Now if you excuse me, time for a relaxing evening of food, wine, and bath before bed. <span class="hashtag">#PompeiiStrong</span>
         </div>
         <div class="tweet-actions">
           <span>💬 897</span>
@@ -844,7 +847,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          WTF, the house across the street just got DEMOLISHED by a volcano bomb!
+          WTF, the temple across the street just got DEMOLISHED by a volcano bomb!
         </div>
         <div class="media">
           <video controls>
@@ -884,7 +887,7 @@
           <button class="reveal-button" onclick="toggleReveal(this)">⋯</button>
         </div>
         <div class="tweet-content">
-          I can’t believe I made it through the night but I have no clue how I’m gonna get out of here... there’s feet and feet of this stuff blocking everything.
+          I can’t believe I made it through the night but I have no clue how I’m gonna get out of here... there’s feet and feet of this stuff blocking everything!!
         </div>
         <div class="media">
           <img src="debris-field.png" alt="Debris after day 1" />
