Fixed messed up time

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             <div class="user-info">
               <div class="tweet-user">
                 <span class="display-name">Vitus Viator</span>
-                <span class="meta-line">@garum_is_life · Aug 24, 79 10:05am</span>
+                <span class="meta-line">@garum_is_life · Aug 24, 79 10:25am</span>
               </div>
             </div>
           </div>
@@ -770,8 +770,8 @@
             <div class="avatar"><img src="spqr.jpg" alt="Titus Avatar" /></div>
             <div class="user-info">
               <div class="tweet-user">
-                <span class="display-name">Rome Emergency Management Agency 12:02pm</span>
-                <span class="meta-line">@REMA · Aug 24, 79</span>
+                <span class="display-name">Rome Emergency Management Agency</span>
+                <span class="meta-line">@REMA · Aug 24, 79 12:02pm</span>
               </div>
             </div>
           </div>
