--- a/index.html
+++ b/index.html
@@ -790,7 +790,8 @@
           <span>📊 89K</span>
         </div>
         <div class="hidden-div">
-          <p class="figure">Fig. 8. "Harbor scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+          <p class="figure">Fig. 8. OttavianoUrsu, illustration, https://en.m.wikipedia.org/wiki/File:Flag_of_the_Roman_Empire_with_Eagle_%283-2%29.svg.</p>
+          <p class="figure">Fig. 9. "Harbor scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
 
           <p>Pliny the Younger wrote that his adoptive father, Pliny the Elder, would launch a rescue fleet to the shores close to Mt. Vesuvius and to check in on his dear friend Pomponianus.<sup></sup></p>
 
@@ -862,7 +863,7 @@
           <span>📊 4.9k</span>
         </div>
         <div class="hidden-div">
-          <p class="figure">Fig. 9. "Temple destruction scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+          <p class="figure">Fig. 10. "Temple destruction scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
 
           <p>By the late afternoon, the volcanic cloud was upwards of 16 miles into the sky and Mt. Vesuvius was now bombarding Pompeii with lithics, a much larger, denser type of rock 6-12 inches in diameter.<sup></sup> These screeching projectiles and the heaviness of nearly two feet of pumice began to strain and demolish the roofs of the structures of Pompeii, causing severe damage and death.</p>
 
@@ -941,7 +942,7 @@
           <span>📊 27K</span>
         </div>
         <div class="hidden-div">
-          <p class="figure">Fig. 10. "Pyroclastic surge scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
+          <p class="figure">Fig. 11. "Pyroclastic surge scene," Paul W.S. Anderson, <em>Pompeii</em>, 2014.</p>
 
           <p>At roughly six in the morning, it was now Pompeii’s turn to bear the brunt of pyroclastic surges.<sup></sup> The first was actually repelled by Pompeii’s centuries-old city walls and granted them a reprieve of about an hour, but the next two would flow over the walls and begin to take the lives of the remaining survivors. While not as hot as the surges that took out the citizens of Herculaneum, they were just as deadly but probably more excruciatingly so as instead of instantly vaporizing, Pompeiians burned to death and asphyxiated on the noxious gases.<sup></sup> Since these surges were not as hot and thus did not carbonize human flesh, they allowed the remains to leave imprints in the volcanic ash that future archaeologists would be able to fill with plaster and make molds that give us the dramatic casts we see in museums throughout the world today.<sup></sup></p>
 
@@ -999,6 +1000,7 @@
         <p>Knauf, Daniel dir. <em>Spartacus: Blood and Sand</em>. Starz Entertainment, 2010.</p>        
         <p>Levin-Richardson, Sarah. <em>The Brothel of Pompeii: Sex, Class, and Gender at the Margins of Roman Society</em>. Cambridge University Press, 2019.</p>
         <p>Martial. <em>Epigrams</em>. Translated by D.R. Shackleton Bailey. Vol. 3. Harvard University Press, 1993.</p>
+        <p>OttavianoUrsu. <em>Flag of the Roman Empire with Eagle</em>. July 25, 2024. Accessed April 19, 2025. https://en.m.wikipedia.org/wiki/File:Flag_of_the_Roman_Empire_with_Eagle_%283-2%29.svg</p>
         <p>Pliny the Younger. <em>The Letters of the Younger Pliny</em>. Translated by Betty Radice. Penguin Books, 1969.</p>
         <p>Roberts, Paul. <em>Life and Death in Pompeii and Herculaneum</em>. Oxford University Press, 2013.</p>
         <p>Seneca the Younger. <em>Natural Questions</em>. Translated by Harry M. Hine. The University of Chicago Press, 2010.</p>
